--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,32 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
+*::-webkit-scrollbar {
+    /* width */
+    @media only screen and (min-width: 953px) {
+        width: 10px !important;
+    }
+    @media only screen and (min-width: 672px) and (max-width: 952px) {
+        width: 8px !important;
+    }
+    @media only screen and (max-width: 671px) {
+        width: 6px !important;
+    }
+}
+
+/* scrollbar */
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #f5f5f5;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #c2c2c2;
+}
+
 /* Firefox */
 input[type="number"] {
     -moz-appearance: textfield;
