--- a/src/components/Dropdown/styles.module.css
+++ b/src/components/Dropdown/styles.module.css
@@ -1,5 +1,5 @@
 .dropdown {
-    @apply flex items-center gap-2 select-none relative bg-white rounded px-1 lg:px-2 py-1 cursor-pointer z-[1000];
+    @apply flex items-center gap-2 select-none relative bg-white rounded px-1 lg:px-2 py-1.5 md:py-1 min-w-fit cursor-pointer;
 }
 
 .labelContainer {
@@ -20,7 +20,7 @@
 }
 
 .menu {
-    @apply -left-1 absolute bottom-0 -translate-x-full transition-all mr-2 divide-y divide-gray-200 bg-white rounded overflow-hidden z-50;
+    @apply md:-left-1 absolute -bottom-1 translate-y-full md:translate-y-0 md:bottom-0 md:-translate-x-full transition-all md:mr-2 divide-y divide-gray-200 bg-white rounded overflow-hidden z-50 min-w-full md:min-w-fit;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -33,5 +33,5 @@
 }
 
 .menuItem {
-    @apply py-1.5 md:py-2 px-2 text-3xs md:text-2xs lg:text-xs hover:bg-formItemInput lg:px-3;
+    @apply py-1.5 md:py-2 px-2 text-3xs md:text-2xs lg:text-xs hover:bg-formItemInput lg:px-3 !min-w-fit;
 }
