--- a/src/index.css
+++ b/src/index.css
@@ -56,15 +56,18 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-*::-webkit-scrollbar {
-    /* width */
-    @media only screen and (min-width: 953px) {
+@media only screen and (min-width: 953px) {
+    *::-webkit-scrollbar {
         width: 10px !important;
     }
-    @media only screen and (min-width: 672px) and (max-width: 952px) {
+}
+@media only screen and (min-width: 672px) and (max-width: 952px) {
+    *::-webkit-scrollbar {
         width: 8px !important;
     }
-    @media only screen and (max-width: 671px) {
+}
+@media only screen and (max-width: 671px) {
+    *::-webkit-scrollbar {
         width: 6px !important;
     }
 }
