--- a/src/pages/SpecialistDashboardPage/layouts/Header/styles.module.css
+++ b/src/pages/SpecialistDashboardPage/layouts/Header/styles.module.css
@@ -1,3 +1,3 @@
 .searchButton {
-    @apply w-[120px] md:w-[150px] lg:w-[92px] xl:w-[110px] md:ml-0 !py-0 !h-[24px] md:!h-[28px] lg:!h-[34px] hover:!text-black  hover:!bg-white !shadow-formItem !bg-[#f7f7f7] !text-black !border-success active:!bg-success active:!text-white transition-all !text-2xs md:!text-xs lg:!text-sm gap-2 xl:gap-3;
+    @apply w-[120px] md:w-[150px] lg:w-[92px] xl:w-[110px] md:ml-0 !py-0 !h-[24px] md:!h-[28px] lg:!h-[34px] !shadow-formItem !bg-[#f7f7f7] !text-black !border-success hover:!bg-success hover:!text-white transition-all !text-2xs md:!text-xs lg:!text-sm gap-2 xl:gap-3;
 }
