--- a/src/components/FileField/styles.module.css
+++ b/src/components/FileField/styles.module.css
@@ -1,42 +1,42 @@
 .container {
-  @apply w-full flex flex-col p-2 bg-formItem rounded relative;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    @apply w-full flex flex-col p-2 bg-formItem rounded relative;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
 
 .uploadPart {
-  @apply flex w-full items-center justify-between gap-4;
+    @apply flex w-full items-center justify-between gap-4;
 }
 
 .uploadShow {
-  @apply border w-full cursor-pointer flex items-center justify-between px-2 border-black rounded;
+    @apply border-[0.5px] w-full cursor-pointer flex items-center justify-between px-2 border-black rounded hover:!bg-white;
 }
 
 .button {
-  @apply h-[22px] lg:h-[26px] w-[81px] lg:!text-xs text-nowrap border-black !bg-transparent px-2;
+    @apply h-[22px] lg:h-[26px] w-[81px] lg:!text-xs text-nowrap border-black !bg-transparent hover:!bg-white px-2 !border-[0.5px];
 }
 
 .inputField {
-  @apply relative w-full justify-between flex items-center cursor-pointer overflow-hidden text-ellipsis;
+    @apply relative w-full justify-between flex items-center cursor-pointer overflow-hidden text-ellipsis;
 }
 
 .input {
-  @apply z-10 w-full h-full absolute left-0 top-0 opacity-0;
+    @apply z-10 w-full h-full absolute left-0 top-0 opacity-0;
 }
 
 .label {
-  @apply w-full text-center justify-center;
+    @apply w-full text-center justify-center;
 }
 
 .confirmBox {
-  @apply z-20 bg-white bg-opacity-40 backdrop-blur-md absolute left-0 top-0 w-full flex flex-col justify-between min-h-full px-2 py-2;
-  animation: popUp 0.35s 1;
+    @apply z-20 bg-white bg-opacity-40 backdrop-blur-md absolute left-0 top-0 w-full flex flex-col justify-between min-h-full px-2 py-2;
+    animation: popUp 0.35s 1;
 }
 
 @keyframes popUp {
-  0% {
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-  }
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
