--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -7,7 +7,7 @@
 
 /* Modal Box */
 .modal {
-    @apply bg-white shadow-lg p-4 rounded-md max-w-[100vw] max-h-[100vh] overflow-y-auto;
+    @apply bg-white shadow-lg px-2 lg:px-4 py-2 rounded-md max-w-[100vw] max-h-[100vh] overflow-y-auto;
     animation: popUp 0.35s ease-out;
     direction: rtl;
 }
