--- a/src/components/FieldSet/styles.module.css
+++ b/src/components/FieldSet/styles.module.css
@@ -1,70 +1,63 @@
 .fieldset {
-    @apply w-full relative rounded-md;
-    border-style: solid;
-    border-top-width: 0.5px;
-    border-color: #00000066;
-    min-width: 0px;
+  @apply w-full relative rounded-md;
+  border-style: solid;
+  border-top-width: 0.5px;
+  border-color: #00000066;
+  min-width: 0px;
+  overflow-x: hidden;
 }
 
 .container {
-    @apply relative w-full px-3 md:px-4 py-4 lg:px-8 lg:pt-6;
+  @apply relative w-full px-3 md:px-4 py-4 lg:px-8 lg:pt-6;
 }
 
 .borderImageByTitle {
-    @apply rounded-t-md -top-[5px];
-    border-left-width: 0.5px;
-    border-right-width: 0.5px;
-    border-style: solid;
-    -moz-border-image: -moz-linear-gradient(
-        top,
-        #00000055 0%,
-        transparent 100%
-    );
-    -webkit-border-image: -webkit-linear-gradient(
-        top,
-        #00000055 0%,
-        transparent 100%
-    );
-    border-image: linear-gradient(to bottom, #00000055 0%, transparent 100%);
-    -webkit-border-image-slice: 0.5;
-    border-image-slice: 0.5;
+  @apply rounded-t-md -top-[5px];
+  border-left-width: 0.5px;
+  border-right-width: 0.5px;
+  border-style: solid;
+  -moz-border-image: -moz-linear-gradient(top, #00000055 0%, transparent 100%);
+  -webkit-border-image: -webkit-linear-gradient(
+    top,
+    #00000055 0%,
+    transparent 100%
+  );
+  border-image: linear-gradient(to bottom, #00000055 0%, transparent 100%);
+  -webkit-border-image-slice: 0.5;
+  border-image-slice: 0.5;
 }
 
 .borderImage {
-    @apply rounded-t-md top-[2px];
-    border-left-width: 0.5px;
-    border-right-width: 0.5px;
-    border-style: solid;
-    -moz-border-image: -moz-linear-gradient(
-        top,
-        #00000055 0%,
-        transparent 100%
-    );
-    -webkit-border-image: -webkit-linear-gradient(
-        top,
-        #00000055 0%,
-        transparent 100%
-    );
-    border-image: linear-gradient(to bottom, #00000055 0%, transparent 100%);
-    -webkit-border-image-slice: 0.5;
-    border-image-slice: 0.5;
+  @apply rounded-t-md top-[2px];
+  border-left-width: 0.5px;
+  border-right-width: 0.5px;
+  border-style: solid;
+  -moz-border-image: -moz-linear-gradient(top, #00000055 0%, transparent 100%);
+  -webkit-border-image: -webkit-linear-gradient(
+    top,
+    #00000055 0%,
+    transparent 100%
+  );
+  border-image: linear-gradient(to bottom, #00000055 0%, transparent 100%);
+  -webkit-border-image-slice: 0.5;
+  border-image-slice: 0.5;
 }
 
 .border {
-    @apply rounded-md;
-    border: 0.5px solid black;
-    @apply border-solid border-[#00000066];
+  @apply rounded-md;
+  border: 0.5px solid black;
+  @apply border-solid border-[#00000066];
 }
 
 .legend {
-    @apply text-xs px-0.5 py-0 relative font-700 z-[1];
-    @apply lg:text-sm mr-6 lg:mr-8 text-[#3D0C02];
-    border-radius: 0.25rem;
-    padding: 0 0.5rem;
-    /* background: white; */
+  @apply text-xs px-0.5 py-0 relative font-700 z-[1];
+  @apply lg:text-sm mr-6 lg:mr-8 text-[#3D0C02];
+  border-radius: 0.25rem;
+  padding: 0 0.5rem;
+  /* background: white; */
 }
 
 .enLegend {
-    margin-left: 32px !important;
-    margin-right: auto !important;
+  margin-left: 32px !important;
+  margin-right: auto !important;
 }
