--- a/src/index.css
+++ b/src/index.css
@@ -5,37 +5,37 @@
 @font-face {
   font-family: IranSans300;
   font-weight: 300;
-  src: url("./assets/fonts/IRANSansX-UltraLight.ttf") format("truetype");
+  src: url("./assets/fonts/IRANSansX-UltraLight.woff") format("woff");
 }
 
 @font-face {
   font-family: IranSans400;
   font-weight: 400;
-  src: url("./assets/fonts/IRANSansX-Light.ttf") format("truetype");
+  src: url("./assets/fonts/IRANSansX-Light.woff") format("woff");
 }
 
 @font-face {
   font-family: IranSans500;
   font-weight: 500;
-  src: url("./assets/fonts/IRANSansX-Regular.ttf") format("truetype");
+  src: url("./assets/fonts/IRANSansX-Regular.woff") format("woff");
 }
 
 @font-face {
   font-family: IranSans600;
   font-weight: 600;
-  src: url("./assets/fonts/IRANSansX-Medium.ttf") format("truetype");
+  src: url("./assets/fonts/IRANSansX-Medium.woff") format("woff");
 }
 
 @font-face {
   font-family: IranSans700;
   font-weight: 700;
-  src: url("./assets/fonts/IRANSansX-DemiBold.ttf") format("truetype");
+  src: url("./assets/fonts/IRANSansX-DemiBold.woff") format("woff");
 }
 
 @font-face {
   font-family: IranSans800;
   font-weight: 800;
-  src: url("./assets/fonts/IRANSansX-Bold.ttf") format("truetype");
+  src: url("./assets/fonts/IRANSansX-Bold.woff") format("woff");
 }
 
 .error {
