--- a/src/components/FieldSet/styles.module.css
+++ b/src/components/FieldSet/styles.module.css
@@ -1,18 +1,18 @@
 .fieldset {
-  @apply w-full relative rounded-md;
   border-style: solid;
   border-top-width: 0.5px;
   border-color: #00000066;
   min-width: 0px;
   overflow-x: hidden;
-}
-
-.container {
-  @apply relative w-full px-3 md:px-4 py-4 lg:px-8 lg:pt-6;
+  width: 100%;
+  position: relative;
+  border-radius: 6px;
 }
 
 .borderImageByTitle {
-  @apply rounded-t-md -top-[5px];
+  top: -5px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
   border-left-width: 0.5px;
   border-right-width: 0.5px;
   border-style: solid;
@@ -28,7 +28,9 @@
 }
 
 .borderImage {
-  @apply rounded-t-md top-[2px];
+  top: 2px;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
   border-left-width: 0.5px;
   border-right-width: 0.5px;
   border-style: solid;
@@ -44,17 +46,10 @@
 }
 
 .border {
-  @apply rounded-md;
   border: 0.5px solid black;
-  @apply border-solid border-[#00000066];
-}
-
-.legend {
-  @apply text-xs px-0.5 py-0 relative font-700 z-[1];
-  @apply lg:text-sm mr-6 lg:mr-8 text-[#3D0C02];
-  border-radius: 0.25rem;
-  padding: 0 0.5rem;
-  /* background: white; */
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #00000066;
 }
 
 .enLegend {
