--- a/src/components/RadioOptions/styles.module.css
+++ b/src/components/RadioOptions/styles.module.css
@@ -1,18 +1,10 @@
-.container {
-    @apply bg-formItem w-full flex flex-col relative p-2 rounded;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
-}
-
 .containerError {
-    border: 1px !important;
-    border-style: solid !important;
-    border-color: #960018 !important;
+  border: 1px !important;
+  border-style: solid !important;
+  border-color: #960018 !important;
 }
 
 .options label {
-    @apply min-w-fit flex-1;
-}
-
-.options {
-    @apply flex flex-wrap w-full gap-1.5;
+  min-width: 0;
+  flex: 1;
 }
