--- a/src/pages/SpecialistDashboardPage/styles.module.css
+++ b/src/pages/SpecialistDashboardPage/styles.module.css
@@ -1,8 +1,11 @@
-.filterRadio {
-    @apply !bg-transparent !border-none !gap-[1px] lg:!gap-1 !py-0 !px-0;
+.filterRadio span {
+  margin-left: 1px !important;
+  font-family: IranSans600, sans-serif !important;
+  font-size: 8px !important;
 }
 
-.filterRadio span {
-    @apply text-2xs !font-600 lg:text-xs;
-    margin-left: 1px !important;
+@media only screen and (min-width: 952px) {
+  .filterRadio span {
+    font-size: 10px !important;
+  }
 }
