--- a/src/pages/SpecialistFormPage/layouts/Header/styles.module.css
+++ b/src/pages/SpecialistFormPage/layouts/Header/styles.module.css
@@ -1,8 +1,3 @@
-/* Container Styles */
-.container {
-  @apply rounded-md bg-white px-1.5 pb-3 md:pb-4 md:pt-1 shadow-md md:px-4;
-}
-
 .normalContainer {
   background: linear-gradient(0deg, #eefeff 0%, #b2e5f8 100%);
 }
@@ -23,7 +18,6 @@
 
 /* Fieldset Styling with Gradient Border */
 .fieldset {
-  @apply px-2 md:px-4 !pt-4 !pb-2 md:!pb-5 relative !border-none;
   background: linear-gradient(white, white) padding-box,
     linear-gradient(180deg, #222222, #222222) border-box;
 }
@@ -33,29 +27,33 @@
   margin-right: 0px;
 }
 
-.form {
-  @apply flex w-full items-end bg-background;
+.radio span {
+  margin-left: 1px !important;
+  font-family: IranSans600, sans-serif !important;
 }
 
-.searchButton {
-  @apply flex border-success w-[96px] lg:w-[115px] ml-auto md:ml-0 mt-2 md:mt-0 mr-auto md:mr-0 bg-[#f7f7f7] !rounded-[2px];
+.filterRadio span {
+  margin-left: 1px !important;
+  font-family: IranSans600, sans-serif !important;
 }
 
-.textField {
-  @apply !border-[0.25px] !rounded-[3px] lg:!rounded w-full bg-[#f7f7f7];
+.table tr:hover td {
+  border-color: #02894c;
 }
 
-.textField input {
-  @apply md:text-3xs md:placeholder:text-3xs lg:placeholder:text-xs lg:text-xs;
-}
-
-.radio {
-  @apply !bg-transparent !border-none !gap-0 md:!gap-[1px] lg:!gap-1 !py-0 !px-0;
+.table th {
+  background-color: #f1f1f1 !important;
 }
 
 @media only screen and (min-width: 303px) and (max-width: 671px) {
   .radio {
     gap: 1px !important;
+  }
+  .radio span {
+    font-size: 8px !important;
+  }
+  .filterRadio span {
+    font-size: 8px !important;
   }
 }
 
@@ -63,32 +61,22 @@
   .radio {
     gap: 1px !important;
   }
-}
-
-.radio span {
-  @apply text-3xs !font-600 lg:text-[10px];
-  margin-left: 1px !important;
-}
-
-.filterRadio {
-  @apply !bg-transparent !border-none !gap-[1px] lg:!gap-1 !py-0 !px-0;
-}
-
-.filterRadio span {
-  @apply text-2xs !font-600 lg:text-xs;
-  margin-left: 1px !important;
+  .radio span {
+    font-size: 8px !important;
+  }
+  .filterRadio span {
+    font-size: 8px !important;
+  }
 }
 
 @media only screen and (min-width: 952px) {
   .modal {
     width: clamp(950px, 96vw, 1280px);
   }
-}
-
-.table tr:hover td {
-  @apply border-success;
-}
-
-.table th {
-  @apply !bg-[#f1f1f1];
+  .radio span {
+    font-size: 10px !important;
+  }
+  .filterRadio span {
+    font-size: 10px !important;
+  }
 }
