update package.json and styles.module.css

--- a/src/components/Page/styles.module.css
+++ b/src/components/Page/styles.module.css
@@ -2,7 +2,7 @@
 
 /* Page container */
 .page {
-  background: url("https://salamatehr.ir/resource/files/1736921470861.png");
+  /* background: url("https://salamatehr.ir/resource/files/1736921470861.png"); */
 }
 
 /* Main content area */
