--- a/src/components/CheckBox/styles.module.css
+++ b/src/components/CheckBox/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-    @apply relative inline-flex justify-between items-center gap-3 lg:gap-6 rounded-[2px] bg-background lg:rounded px-1 lg:px-[6px] py-1 border-[0.5px] border-solid border-black cursor-pointer opacity-90 hover:opacity-100 overflow-hidden;
+    @apply relative inline-flex justify-between items-center gap-3 lg:gap-6 rounded-[2px] bg-background lg:rounded px-1 lg:px-[6px] py-1 border-[0.5px] border-solid border-black cursor-pointer opacity-90 hover:opacity-100 hover:bg-white overflow-hidden;
 }
 
 .enContainer .label {
@@ -28,7 +28,7 @@
 }
 
 .label {
-    @apply ml-2 select-none font-600 text-3xs md:text-2xs text-black lg:text-[11px] xl:text-xs;
+    @apply ml-2 select-none font-600 text-2xs text-black lg:text-[11px] xl:text-xs;
 }
 
 .firstLayer {
