--- a/src/components/Tab/styles.module.css
+++ b/src/components/Tab/styles.module.css
@@ -57,8 +57,12 @@
 }
 
 .dropdown-default {
-  background: linear-gradient(180deg, #fff 0%, #c1ffe3 100%);
+  background: linear-gradient(180deg, #fff 0%, #e0fcff 100%);
   box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.25) inset;
+}
+
+.dropdown-default:hover {
+  background: linear-gradient(180deg, #fff 0%, #c1ffe3 100%) !important;
 }
 
 .dropdown-default:hover {
