update 4 files and delete 1 file

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url("tailwindcss/base");
+/* @import url("tailwindcss/base");
 @import url("tailwindcss/components");
-@import url("tailwindcss/utilities");
+@import url("tailwindcss/utilities"); */
 @font-face {
   font-family: IranSans300;
   font-weight: 300;
