--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 /* @import url("tailwindcss/base");
 @import url("tailwindcss/components");
-@import url("tailwindcss/utilities"); */
+@import url("tailwindcss/utilities");
+@import url("react-draft-wysiwyg/dist/react-draft-wysiwyg.css"); */
+
 @font-face {
   font-family: IranSans300;
   font-weight: 300;
